# codex-evidence

./: .gitignore  .hygiene-ignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
.serena/: onboarding.md
docs/: architecture.md  codex-for-oss-application.md  development-plan.md  dogfood-proof.md  migration-session-memo.md  privacy.md  provenance.md  release-checklist-v0.1.0.md  release-notes-v0.1.0.md  roadmap.md  rollback.md  testing.md
docs/repository-genesis/: repository-init-manifest.v1.yaml
docs/session_handoffs/: session_checkpoint_template.md  session_handoff_latest.md  session_handoff_template.md
docs/session_state/: session_checkpoint_current.json  session_current.json
examples/: dogfood-context-pack.json  dogfood-ingest.json
scripts/: check_public_hygiene.py  validate_current_state_docs.py
specs/: README.md
specs/codex-evidence-public-product/: design.md  requirements.md  tasks.yaml  worklog.ndjson  (+1 more)
tests/: test_authority_class.py  test_cli.py  test_evidence_card_contract.py  test_evidence_identity.py  test_evidence_schema.py  test_evidence_store.py  test_hook_fact_projection.py  test_hooks_capture.py  test_import_contract.py  test_ingest_adapters.py  test_ingest_contract.py  test_lifecycle_integration.py  test_maintenance_task_script.py  test_mcp_readonly.py  test_native_history_search.py  test_reports.py  test_resilience_runtime.py  test_runtime_doctor.py  test_runtime_registration.py  test_session_freshness.py  test_session_state_projection.py  test_unattended_runtime.py
(+103 files in other folders)
