[project]
name = "codex-evidence"
version = "0.1.0"
description = "Local-first Codex CLI evidence and restart-context toolkit."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1,<2",
  "PyYAML>=6,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
codex-evidence = "codex_evidence.cli:main"
codex-evidence-hook = "codex_evidence.hooks:main"
codex-evidence-mcp = "codex_evidence.mcp_server:main"
codex-evidence-resident = "codex_evidence.resident:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
